--- a/cicd/google_cloud/cloudbuild.yaml
+++ b/cicd/google_cloud/cloudbuild.yaml
@@ -80,3 +80,8 @@ steps:
 substitutions:
   _REGION: us-central1
   _STATIC_BUCKET: 'lolo-frontend-static-assets'
+
+
+# Cloud Build options
+options:
+  logging: CLOUD_LOGGING_ONLY
