--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,12 +5,14 @@ ARG NEXT_PUBLIC_FIREBASE_API_KEY
 ARG NEXT_PUBLIC_AUTH_DOMAIN
 ARG NEXT_PUBLIC_API_GATEWAY_URL
 ARG NEXT_PUBLIC_SENTRY_DSN
+ARG BUILD_ID
 
 # --- Environment Variables ---
 ENV NEXT_PUBLIC_FIREBASE_API_KEY=$NEXT_PUBLIC_FIREBASE_API_KEY
 ENV NEXT_PUBLIC_AUTH_DOMAIN=$NEXT_PUBLIC_AUTH_DOMAIN
 ENV NEXT_PUBLIC_API_GATEWAY_URL=$NEXT_PUBLIC_API_GATEWAY_URL
 ENV NEXT_PUBLIC_SENTRY_DSN=$NEXT_PUBLIC_SENTRY_DSN
+ENV BUILD_ID=$BUILD_ID
 
 WORKDIR /build-app
 
